--- a/templates/register.html
+++ b/templates/register.html
@@ -11,7 +11,7 @@
         <h1 class="login-title">Student Registration</h1>
         <p class="login-subtitle">Agricultural & Environmental Engineering<br>University of Ibadan</p>
         
-        <form method="POST" action="{{ url_for('register') }}" id="registerForm">
+        <form method="POST" action="{{ url_for('student_register') }}" id="registerForm">
             <input type="hidden">
             <div class="form-group">
                 <label for="name">Full Name</label>
