--- a/templates/index.html
+++ b/templates/index.html
@@ -541,7 +541,7 @@ production, design and utilization of agricultural and natural resources for sel
 
    
             
-            <!-- Research Resources -->
+            <!-- Research Resources 
             <div class="row">
                 <div class="col-lg-6 mb-4">
                     <div class="card shadow-sm">
@@ -594,9 +594,9 @@ production, design and utilization of agricultural and natural resources for sel
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
-    <!-- News & Events Section 
+    <!-- News & Events Section --
     <section id="news" class="py-5 bg-light">
         <div class="container">
             <div class="text-center mb-5">
